--- a/content/bleaching2.qmd
+++ b/content/bleaching2.qmd
@@ -1974,14 +1974,146 @@ rpn_crw.main3
 ```
 
 ```{r}
-# Using ggplot
-ggplot(data = rpn_crw.main3, aes(x = date, y = value, col = metric)) +
-  geom_line() +
-#  geom_smooth(se = FALSE) +
-  labs(y = "Temperature")
-#  scale_x_datetime(date_breaks = "year", date_labels = "%b-%Y")
+rpn_crw.main4 <- 
+  rpn_crw.main3 %>%
+  pivot_wider(names_from = metric, values_from = value)
 ```
 
+```{r}
+rpn_crw.main4
+```
+
+<!-- #```{r} -->
+<!-- # Using ggplot -->
+<!-- #ggplot(data = rpn_crw.main4, aes(x = date, y = sst_max)) + -->
+<!-- #  geom_line() + -->
+<!-- #  geom_smooth(se = FALSE) + -->
+<!-- #  labs(y = "Temperature") %>% -->
+<!-- #  scale_x_datetime(date_breaks = "year", date_labels = "%b-%Y") -->
+
+<!-- #    geom_line(aes(y = dhw)) + -->
+
+<!--   scale_y_continuous( -->
+
+<!--     # Features of the first axis -->
+<!--     name = "Temperature", -->
+
+<!--     # Add a second axis and specify its features -->
+<!--     sec.axis = ggplot2::sec_axis(dhw) -->
+<!--   ) -->
+
+<!-- ``` -->
+
+```{r}
+# Create long labels to be wrapped
+iris$Species = paste(iris$Species, 
+                     "random text to make the labels much much longer than the original labels")
+```
+
+
+```{r}
+rpn_crw.main.gg <- ggplot(data = rpn_crw.main4, aes(x = date, y = sst_max)) +
+  geom_line(aes(color = "SST Max (°C)")) +
+#  ylim(0, 30) +
+#  scale_fill_discrete(name = "Dose", labels = c("A", "B")) +
+  geom_line(aes(y = dhw, color = "Degree Heating Week")) +
+  scale_y_continuous(limits = c(0, 30), breaks = c(0, 5, 10, 15, 20, 25, 30)) +
+  #scale_x_continuous(breaks = seq(0, 336, 24)) +
+  scale_x_date(date_labels = "%b %y") +
+  scale_color_manual(values = c("red2", "blue"))+
+  labs(x = NULL) +
+  theme(#strip.text = element_text(size = 10, color = "black", hjust = 0.50),
+        #strip.background = element_rect(fill = "#FFFFFF", color = NA),    
+        panel.background = element_rect(fill = "#FFFFFF", color = NA),
+        panel.grid.major.x = element_blank(),
+        panel.grid.minor.x = element_blank(),
+        panel.grid.minor.y = element_blank(),
+        panel.grid.major.y = element_line(color = "#b2b2b2"),
+        #panel.spacing.x = unit(1, "cm"),
+        #panel.spacing.y = unit(0.5, "cm"),
+        #panel.spacing = unit(1, "lines"),
+        axis.ticks.x = element_blank(),
+        axis.ticks.y = element_blank(),
+        legend.position = 'right',
+        #plot.title = element_text(size = 11),
+        axis.text.y = element_text(size = 10),
+        #axis.text.x = element_text(size = 12),
+        axis.text.x = element_text(angle = 60, hjust = 0.25, size = 8),
+        axis.title.y = element_blank(),
+        legend.title = element_blank())
+```
+
+```{r}
+rpn_crw.main.gg
+```
+
+```{r}
+scale = 0.25
+```
+
+```{r}
+pkpd <- ggplot(data = rpn_crw.main4, aes(x = date, y = sst_max)) +
+#  scale_y_continuous(breaks = c(5, 5), limits = c(0, 50)) +
+#  ylim(0, 40) +
+  geom_line(aes(color = "Maximum Sea Surface Temperature")) +
+  geom_line(aes(y = dhw * scale, color = "Degree Heating Week"))+
+#  scale_x_continuous(breaks = seq(0, 336, 24)) +
+  scale_y_continuous(sec.axis = sec_axis(~.*scale, name = "DHW")) +
+  labs(x = "Date", y = "SST Max (C)", color = "") +
+  scale_color_manual(values = c("orange2", "gray50"))
+
+print(pkpd)
+```
+
+
+```{r}
+#-----------------------------------------------------------------------------
+# Rescale the second y axis by 
+#   - subtracting its minimum value (to set it to start at 0)
+#   - scaling so that it has the same range as the 'y1' variable
+#   - offsettting it by the minimum value of y1
+#-----------------------------------------------------------------------------
+a            <- range(rpn_crw.main4[['sst_max']])
+```
+
+```{r}
+a
+```
+
+```{r}
+b            <- range(rpn_crw.main4[['dhw']])
+```
+
+```{r}
+scale_factor <- diff(a)/diff(b)
+```
+
+```{r}
+rpn_crw.main4[['sst_max']]      <- ((rpn_crw.main4[['sst_max']] - b[1]) * scale_factor) + a[1]
+```
+
+```{r}
+#-----------------------------------------------------------------------------
+# Need to define the second axis transformation to be the inverse of the data
+# transformation to everything cancels out appropriately
+#-----------------------------------------------------------------------------
+trans <- ~ ((. - a[1]) / scale_factor) + b[1]
+```
+
+```{r}
+pkpd <- ggplot(data = rpn_crw.main4, aes(x = date, y = sst_max)) +
+#  scale_y_continuous(breaks = c(5, 5), limits = c(0, 50)) +
+#  ylim(0, 40) +
+  geom_line(aes(color = "Maximum Sea Surface Temperature")) +
+  geom_line(aes(y = dhw * scale, color = "Degree Heating Week"))+
+#  scale_x_continuous(breaks = seq(0, 336, 24)) +
+  scale_y_continuous(sec.axis = sec_axis(trans = trans, name = 'dhw'), 
+                     breaks = c(0, 500)) +
+  labs(x = "Date", y = "SST Max (C)", color = "") +
+  scale_color_manual(values = c("orange2", "gray50"))
+
+print(pkpd)
+```
 
 ```{r}
 my_data <- read_tsv("https://coralreefwatch.noaa.gov/product/vs/data/easter_island.txt")
